# 99-haskell-problems

./: 99-haskell-problems.cabal  README.md
src/H99/: Ex01To10.hs  Ex11To20.hs
tests/: Main.hs
