name:                h99
version:             0.1.0.0
synopsis:            Solutions to Ninety-Nine Haskell Problems
homepage:            https://github.com/pkukielka/99-haskell-problems
license:             MIT
license-file:        LICENSE
author:              Piotr Kukielka
category:            Language
Build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      H99.Ex01To10 H99.Ex11To20
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  build-depends:
      base >= 4 && < 6
  ghc-options:
      -Wall
  default-language:
      Haskell2010

test-suite h99-test
  type:
      exitcode-stdio-1.0
  x-uses-tf:
      true
  hs-source-dirs:
      src, tests
  build-depends:
      base >= 4 && < 5,
      HUnit >= 1.2 && < 2,
      QuickCheck >= 2.4,
      test-framework >= 0.4.1,
      test-framework-quickcheck2,
      test-framework-hunit
  ghc-options:
      -Wall -rtsopts
  default-language:
      Haskell2010
  main-is:
      Main.hs